--- a/front/app/stylesheets/main.scss
+++ b/front/app/stylesheets/main.scss
@@ -25,6 +25,7 @@ minds-topbar{
     height: 64px;
     box-sizing: border-box;
     padding: $minds-padding 0 $minds-padding*2;
+    margin-right: $minds-padding*4;
 
     img{
       height:100%;
